--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h3>Crossfire STOVE</h3>
                 <p>A fan project recreating the CrossFire website for STOVE, highlighting its 
                     transition from GameClub and showcasing my skills in front-end web development and design.</p>
-                <a href="https://>cfph.onstove.com/" class="project-link"> View Website </a>
+                <a href="https://cfph.onstove.com/" class="project-link"> View Website </a>
             </div>
         </div>
 
@@ -119,3 +119,4 @@
     </div>
 </body>
 </html>
+
