--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
            <nav>
               <ul>
-                <button id="themeToggle">Dark/Light</button>
+                <button id="themeToggle">Dark/Light</button> <br>
                   <li class="nav-home"><a href="#home">Home</a></li>
                  <li><a href="#about">About</a></li>
                  <li><a href="#projects">Projects</a></li>
@@ -143,3 +143,4 @@
   });
 </script>
 </html>
+
