--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h1>Hi, I'm Paul Timothy</h1>
                     <p>I'm a  web developer</p>
                     <a href="#projects" class="button">View my work</a>
-                   
+                   <button id="editBtn">Edit</button>
                 </div>
             </section>
 
@@ -127,3 +127,4 @@
          <script src="edit.js"></script>
 </body>
 </html>
+
